# BattleAgent-revamped

./: .env.example  .gitignore  README.md  improvemnt-plan-battleagent.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: agent.py  agent_parsing.py  agent_prompting.py  agent_state_sync.py  battles.py  config.py  run_Agincourt.sh  run_Falkirk.sh  run_Poitiers.sh  run_claude.sh  sandbox.py  schemas.py  simulation_controller.py  state_serialization.py
src/group_experience/: individual_profile.py  injury_maker.py
src/procoder/: __init__.py  functional.py
src/procoder/prompt/: __init__.py  base.py  modules.py  proxy.py  sequential.py  utils.py
src/procoder/utils/: __init__.py  my_typing.py
src/prompt/: Detachment_Agent_prompt.py  action_space_setting.py  agent_profile.py  agent_profile_Agincourt.py  agent_profile_Falkirk.py  agent_profile_Poitiers.py
src/support_agents/: referee.py  sim_stopper.py
src/utils/: LLM_api.py  VLM_api.py  battle_logger.py  event_log.py  live_viz.py  logging_setup.py  run_metadata.py  shared_func.py  surrounding_visualization.py  token_accounting.py
tests/: conftest.py  test_agent_parsing.py  test_batch_transport.py  test_branch_streamlining.py  test_diary_batching.py  test_e2e_offline.py  test_fake_provider.py  test_history_window.py  test_parallel_equivalence.py  test_prompt_snapshots.py  test_referee.py  test_schemas.py  test_sim_stopper.py  test_state_serialization.py  test_structured_parser.py  test_token_accounting.py  test_vision.py
viz/: README.md  battle_viewer.html  sample_events.jsonl
(+33 files in other folders)
