[project]
name = "battleagent-revamped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "roman>=5.2",
    "json5>=0.14.0",
    "numpy>=2.4.6",
    "matplotlib>=3.10.9",
    "treelib>=1.8.0",
    "tqdm>=4.0.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["F"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
